--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "php" : ">=7.2.0"
     },
     "require_dev": {
-       
+      "php" : ">=7.2.0" 
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable" : true,
     "autoload": {
         "psr-4": {
